# Rag-AI-Agent

./: .env.example  README.md  feedback.txt  main.py  pyproject.toml
app/: config.py  crud.py  main.py  models.py  schemas.py  seed.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/endpoints/: documents.py  faqs.py  health.py  products.py  tickets.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  faq.py  ticket.py
app/routers/: analyze.py  reviews.py
app/schemas/: faq.py  product.py  rag.py  ticket.py
app/services/: __init__.py  chunker.py  embeddings.py  faq_service.py  guardrails.py  ingest.py  llm.py  ollama.py  pdf_loader.py  rag_query.py  ticket_service.py  vectorstore.py
data/chroma/: chroma.sqlite3
frontend/rag-ai/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisPanel.tsx  ReviewForm.tsx  ReviewList.tsx
frontend/src/lib/: api.ts  types.ts
storage/chroma/: chroma.sqlite3
